Architecture - Create App components, bases and core services

--- a/projects/app-ui/src/app/features/home/home-view/home-view.component.html
+++ b/projects/app-ui/src/app/features/home/home-view/home-view.component.html
@@ -9,12 +9,17 @@
 				<h5>Header 5</h5>
 				<h6>Header 6</h6>
 				<hr />
-				<h2>Classes</h2>
-				<h1 class="mat-headline-1"><code>h1.mat-headline-1</code></h1>
-				<h1 mat-headline-1><code>h1.mat-headline-1 Test attrebute</code></h1>
-				<h1 class="mat-headline-2"><code>h1.mat-headline-2</code></h1>
-				<h1 class="mat-headline-3"><code>h1.mat-headline-3</code></h1>
-				<h1 class="mat-headline-4"><code>h1.mat-headline-4</code></h1>
+				<h2>Paragraphs</h2>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+				<p class="mat-caption">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+				<p class="mat-body-1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+				<p class="mat-body-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+				<hr />
+				<h2>Display 1,2,3,4</h2>
+				<h1 class="mat-display-1"><code>h1.mat-display-1</code></h1>
+				<h1 class="mat-display-2"><code>h1.mat-display-2</code></h1>
+				<h1 class="mat-display-3"><code>h1.mat-display-3</code></h1>
+				<h1 class="mat-display-4"><code>h1.mat-display-4</code></h1>
 			</mat-card>
 			<mat-card> </mat-card>
 			<mat-card> </mat-card>
