--- a/projects/app-ui/src/assets/styles/01-tools/_tools.scss
+++ b/projects/app-ui/src/assets/styles/01-tools/_tools.scss
@@ -1,1 +1,3 @@
-// Tools available worldwide, that is, mixes and functions (mixins).
+// Tools available appwide, that is, mixes and functions (mixins).
+@import "./toots.bg-color";
+@import "./tools.height";
