--- a/projects/app-ui/src/assets/styles/main.scss
+++ b/projects/app-ui/src/assets/styles/main.scss
@@ -5,7 +5,7 @@
 
 // 01. tools
 /// @group TOOLS
-// Tools available worldwide, that is, mixes and functions (mixins).
+// Tools available app-wide, that is, mixes and functions (mixins).
 @import "01-tools/tools";
 
 // 02. generic
