--- a/projects/app-ui/src/app/app.component.scss
+++ b/projects/app-ui/src/app/app.component.scss
@@ -1,13 +1,8 @@
 :host {
-    display: flex;
-    min-height: 100%;
-    flex-direction: column;
+    height: 100vh;
+    display: block;
 }
-.color-picker {
-    margin-bottom: 20px;
-}
-.color-palette {
-    display: inline-block;
-    text-align: center;
-    margin-right: 20px;
+main {
+    height: 100%;
+    overflow-y: auto;
 }
