--- a/projects/app-ui/src/app/core/auth/login/login.component.scss
+++ b/projects/app-ui/src/app/core/auth/login/login.component.scss
@@ -40,6 +40,8 @@
     }
 }
 
+//  @include media-breakpoint-down(sm) {
+//  }
 // @include media-breakpoint-up(sm) {
 //     .identity-logo {
 //         position: absolute;
