--- a/projects/app-ui/src/assets/styles/00-settings/_settings.bootstrap.scss
+++ b/projects/app-ui/src/assets/styles/00-settings/_settings.bootstrap.scss
@@ -20,6 +20,12 @@ $prefix: "mo-";
 @import "node_modules/bootstrap/scss/containers";
 @import "node_modules/bootstrap/scss/grid";
 
+//Required Variables
+:root {
+    --mo-border-style: solid;
+    --mo-border-color: #dcdcdc;
+    --mo-border-radius: 5px;
+}
 //Bootstrap override to support margin-inline and padding-inline for rtl support
 $utilities: map-merge(
     $utilities,
@@ -74,6 +80,71 @@ $utilities: map-merge(
                     property: padding-inline-start,
                     class: ps,
                     values: $spacers,
+                )
+            ),
+        "width":
+            map-merge(
+                map-get($utilities, "width"),
+                (
+                    responsive: true,
+                    values:
+                        map-merge(
+                            map-get(map-get($utilities, "width"), "values"),
+                            (
+                                10: 10%,
+                                20: 20%,
+                                30: 30%,
+                                40: 40%,
+                                60: 60%,
+                                70: 70%,
+                                80: 80%,
+                                90: 90%,
+                            )
+                        ),
+                )
+            ),
+        "height":
+            map-merge(
+                map-get($utilities, "height"),
+                (
+                    responsive: true,
+                    values:
+                        map-merge(
+                            map-get(map-get($utilities, "height"), "values"),
+                            (
+                                10: 10%,
+                                20: 20%,
+                                30: 30%,
+                                40: 40%,
+                                60: 60%,
+                                70: 70%,
+                                80: 80%,
+                                90: 90%,
+                            )
+                        ),
+                )
+            ),
+        "viewport-height":
+            map-merge(
+                map-get($utilities, "viewport-height"),
+                (
+                    responsive: true,
+                    values:
+                        map-merge(
+                            map-get(map-get($utilities, "viewport-height"), "values"),
+                            (
+                                10: 10%,
+                                20: 20%,
+                                30: 30%,
+                                40: 40%,
+                                50: 50%,
+                                60: 60%,
+                                70: 70%,
+                                80: 80%,
+                                90: 90%,
+                                auto: auto,
+                            )
+                        ),
                 )
             ),
     )
