Implement login flow logic, Add ngx-translate, Add ngx-translate-multi-http-loader

--- a/projects/app-ui/src/app/features/home/home-view/home-view.component.html
+++ b/projects/app-ui/src/app/features/home/home-view/home-view.component.html
@@ -1,6 +1,9 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-sm-8">
+			{{ 'identity.name' | translate }}
+			{{ 'home.title' | translate }}
+
 			<mat-card>
 				<h1>Header 1</h1>
 				<h2>Header 2</h2>
