--- a/projects/app-ui/src/app/core/auth/login/login.component.html
+++ b/projects/app-ui/src/app/core/auth/login/login.component.html
@@ -11,19 +11,20 @@
 		<div class="col-sm-8 col-md-9">
 			<div class="container">
 				<div class="row align-items-center justify-content-center">
-					<div class="col-md-7 mt-4 mt-sm-0">
+					<div class="col-md-7 col-lg-6 mt-4 mt-sm-0">
 						<h1>Sign In</h1>
-						<h2 *ngIf="enableStoreSelection">Select an Account</h2>
-						<div class="vh-40 overflow-auto" *ngIf="enableStoreSelection && !hasSelectedStore">
+						<h3 *ngIf="enableStoreSelection && !hasSelectedStore">Select an Account</h3>
+						<h3 *ngIf="enableStoreSelection && hasSelectedStore">Enter Credentials</h3>
+
+						<div
+							class="overflow-auto mb-4"
+							[ngClass]="{ 'vh-20': savedStores!.length > 3 }"
+							*ngIf="enableStoreSelection && !hasSelectedStore"
+						>
 							<mat-list>
-								<mat-list-item *ngFor="let store of savedStores; let last = last">
-									<img
-										src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
-										class="rounded-circle me-1"
-										style="width: 35px"
-										alt="Avatar"
-									/>
-									<div matListItemTitle>{{ store.storeName }}</div>
+								<mat-list-item *ngFor="let store of savedStores; let last = last" (click)="selectRecentStore(store)">
+									<app-avatar [name]="store.storeName" [size]="30"></app-avatar>
+									<div matListItemTitle class="mx-2">{{ store.storeName }}</div>
 									<div matListItemLine>{{ store.emailAddress }}</div>
 									<button mat-icon-button class="ms-auto" (click)="removeRecentStore(store)">
 										<mat-icon>close</mat-icon>
@@ -33,14 +34,26 @@
 							</mat-list>
 						</div>
 
+						<div class="mb-4 border-1 border-top border-bottom" *ngIf="enableStoreSelection && hasSelectedStore">
+							<mat-list class="pt-0">
+								<mat-list-item>
+									<button mat-icon-button (click)="clearSelectRecentStore()">&#9754;</button>
+									<app-avatar [name]="selectedStore!.storeName" [size]="30"></app-avatar>
+									<div matListItemTitle class="mx-2">{{ selectedStore!.storeName }}</div>
+									<div matListItemLine>{{ selectedStore!.emailAddress }}</div>
+								</mat-list-item>
+							</mat-list>
+						</div>
+
+						<!-- form -->
 						<form [formGroup]="form" *ngIf="!enableStoreSelection || hasSelectedStore">
-							<div class="form-group">
+							<div class="form-group" *ngIf="!hasSelectedStore">
 								<label>Name</label>
 								<mat-form-field class="d-block">
 									<input type="text" matInput formControlName="name" placeholder="Store Name" />
 								</mat-form-field>
 							</div>
-							<div class="form-group">
+							<div class="form-group" *ngIf="!hasSelectedStore">
 								<mat-form-field class="d-block">
 									<mat-label>Email</mat-label>
 									<input type="email" matInput formControlName="email" placeholder="example@example.com" />
@@ -54,8 +67,8 @@
 										matInput
 										formControlName="password"
 										placeholder="Ex. pat@example.com"
-										name="password"
-										autocomplete="off"
+										name="abcPassword"
+										autocomplete="disabled"
 									/>
 								</mat-form-field>
 							</div>
@@ -63,18 +76,21 @@
 								<button mat-raised-button color="primary" class="w-100" (click)="submitRecord()">Login</button>
 							</div>
 						</form>
+						<!-- End Form -->
+
 						<div class="form-group" *ngIf="!enableStoreSelection">
 							<div class="d-md-flex justify-content-between text-center mt-3">
 								<mat-checkbox color="primary">Remember Me</mat-checkbox>
 								<div>
-									<a href="#">Forgot Password</a>
+									<a mat-button color="primary">Forgot Password</a>
 								</div>
 							</div>
 						</div>
-						<div class="form-group" *ngIf="enableStoreSelection && !hasSelectedStore">
-							<a data-toggle="tab" href="#signup" (click)="enableStoreSelection = false">Sign in to another account</a>
+
+						<div class="form-group text-center my-2" *ngIf="enableStoreSelection">
+							<a class="link" (click)="resetToDefaultLogin()">Sign in to another account</a>
 						</div>
-						<p class="text-center">New to Ecomz? <a data-toggle="tab" href="#signup">Start free trial</a></p>
+						<div class="form-group text-center my-2" *ngIf="!hasSelectedStore">New to Ecomz? <a class="link">Start free trial</a></div>
 					</div>
 				</div>
 			</div>
