--- a/projects/app-ui/src/assets/styles/00-settings/_settings.bootstrap.scss
+++ b/projects/app-ui/src/assets/styles/00-settings/_settings.bootstrap.scss
@@ -82,6 +82,32 @@ $utilities: map-merge(
                     values: $spacers,
                 )
             ),
+        // "border-start":
+        //     map-merge(
+        //         map-get($utilities, "border-start"),
+        //         (
+        //             responsive: true,
+        //             property: border-inline-start,
+        //             class: border-start,
+        //             values: (
+        //                 null: $border-width solid $border-color,
+        //                 0: 0,
+        //             ),
+        //         )
+        //     ),
+        // "border-end":
+        //     map-merge(
+        //         map-get($utilities, "border-end"),
+        //         (
+        //             responsive: true,
+        //             property: border-inline-end,
+        //             class: border-end,
+        //             values: (
+        //                 null: $border-width solid $border-color,
+        //                 0: 0,
+        //             ),
+        //         )
+        //     ),
         "width":
             map-merge(
                 map-get($utilities, "width"),
@@ -133,15 +159,15 @@ $utilities: map-merge(
                         map-merge(
                             map-get(map-get($utilities, "viewport-height"), "values"),
                             (
-                                10: 10%,
-                                20: 20%,
-                                30: 30%,
-                                40: 40%,
-                                50: 50%,
-                                60: 60%,
-                                70: 70%,
-                                80: 80%,
-                                90: 90%,
+                                10: 10vh,
+                                20: 20vh,
+                                30: 30vh,
+                                40: 40vh,
+                                50: 50vh,
+                                60: 60vh,
+                                70: 70vh,
+                                80: 80vh,
+                                90: 90vh,
                                 auto: auto,
                             )
                         ),
@@ -150,3 +176,45 @@ $utilities: map-merge(
     )
 );
 @import "node_modules/bootstrap/scss/utilities/api";
+
+@each $breakpoint in map-keys($grid-breakpoints) {
+    @include media-breakpoint-up($breakpoint) {
+        $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+
+        .border#{$infix}-top {
+            border-top: $border-width solid $border-color;
+        }
+        .border#{$infix}-end {
+            border-inline-end: $border-width solid $border-color;
+        }
+        .border#{$infix}-bottom {
+            border-bottom: $border-width solid $border-color;
+        }
+        .border#{$infix}-start {
+            border-inline-start: $border-width solid $border-color;
+        }
+
+        .border#{$infix}-top-0 {
+            border-top: 0 !important;
+        }
+        .border#{$infix}-end-0 {
+            border-inline-end: 0 !important;
+        }
+        .border#{$infix}-bottom-0 {
+            border-bottom: 0 !important;
+        }
+        .border#{$infix}-start-0 {
+            border-inline-start: 0 !important;
+        }
+
+        .border#{$infix}-x {
+            border-inline-start: $border-width solid $border-color;
+            border-inline-end: $border-width solid $border-color;
+        }
+
+        .border#{$infix}-y {
+            border-top: $border-width solid $border-color;
+            border-bottom: $border-width solid $border-color;
+        }
+    }
+}
