--- a/projects/app-ui/src/assets/styles/03-elements/_elements.body.scss
+++ b/projects/app-ui/src/assets/styles/03-elements/_elements.body.scss
@@ -3,3 +3,17 @@ body {
   min-height: 100vh;
   // overflow: hidden !important;
 }
+::-webkit-scrollbar {
+  width: 5px !important;
+  height: 5px !important;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 3px !important;
+  background: var(--theme-primary-500) !important;
+}
+// ::-webkit-scrollbar-thumb {
+//   background-color: var(--theme-color-disabled);
+// }
+::-webkit-scrollbar-thumb:hover {
+  background-color: #aaa;
+}
