Translations - Refactoring, Convention, Divisions

--- a/projects/app-ui/src/app/shared/components/avatar/avatar.component.html
+++ b/projects/app-ui/src/app/shared/components/avatar/avatar.component.html
@@ -1,1 +1,1 @@
-<ngx-avatar [name]="name" [src]="src" [size]="size"> </ngx-avatar>
+<ngx-avatar [title]="'shared.components.avatar.title' | translate" [name]="name" [src]="src" [size]="size"> </ngx-avatar>
