--- a/projects/app-ui/src/app/core/auth/login/login.component.html
+++ b/projects/app-ui/src/app/core/auth/login/login.component.html
@@ -16,7 +16,7 @@
 			<div class="container">
 				<div class="row align-items-center justify-content-center">
 					<div class="col-md-7 col-lg-6 col-xxl-5 mt-4 mt-sm-0">
-						<h1>Sign In</h1>
+						<h1>{{ 'core.auth.login.title' | translate }}</h1>
 						<h3 *ngIf="enableStoreSelection && !hasSelectedStore">Select an Account</h3>
 						<h3 *ngIf="enableStoreSelection && hasSelectedStore">Enter Credentials</h3>
 
