--- a/projects/app-ui/src/app/shell/shell/shell.component.html
+++ b/projects/app-ui/src/app/shell/shell/shell.component.html
@@ -12,7 +12,7 @@
 		<app-side-navbar></app-side-navbar>
 	</mat-sidenav>
 
-	<mat-sidenav-content style="margin-inline-start: 243px">
+	<mat-sidenav-content>
 		<div class="main-content">
 			<!-- Will be moved to separate component -->
 			<div class="container-fluid">
