style: material typography configuration

--- a/projects/app-ui/src/app/shell/shell/shell.component.html
+++ b/projects/app-ui/src/app/shell/shell/shell.component.html
@@ -8,6 +8,7 @@
 		[opened]="mobileQuery.matches ? false : true"
 		[fixedInViewport]="mobileQuery.matches"
 		fixedTopGap="56"
+		style="width: 238px"
 	>
 		<app-side-navbar></app-side-navbar>
 	</mat-sidenav>
