--- a/projects/app-ui/src/assets/styles/00-settings/_settings.theme-variables.scss
+++ b/projects/app-ui/src/assets/styles/00-settings/_settings.theme-variables.scss
@@ -52,3 +52,105 @@ $theme-warn-A200: var(--theme-warn-A200);
 $theme-warn-A400: var(--theme-warn-A400);
 $theme-warn-A700: var(--theme-warn-A700);
 //#endregion
+
+// Palettes
+$dark-primary-text: #000000;
+$light-primary-text: #f0f0f0;
+$custom-primary-palette: (
+    50: $theme-primary-50,
+    100: $theme-primary-100,
+    200: $theme-primary-200,
+    300: $theme-primary-300,
+    400: $theme-primary-400,
+    500: $theme-primary-500,
+    600: $theme-primary-600,
+    700: $theme-primary-700,
+    800: $theme-primary-800,
+    900: $theme-primary-900,
+    A100: $theme-primary-A100,
+    A200: $theme-primary-A200,
+    A400: $theme-primary-A400,
+    A700: $theme-primary-A700,
+    contrast: (
+        50: $dark-primary-text,
+        100: $dark-primary-text,
+        200: $dark-primary-text,
+        300: $light-primary-text,
+        400: $light-primary-text,
+        500: $light-primary-text,
+        600: $light-primary-text,
+        700: $light-primary-text,
+        800: $light-primary-text,
+        900: $light-primary-text,
+        A100: $dark-primary-text,
+        A200: $light-primary-text,
+        A400: $light-primary-text,
+        A700: $light-primary-text,
+    ),
+);
+
+$custom-accent-palette: (
+    50: $theme-accent-50,
+    100: $theme-accent-100,
+    200: $theme-accent-200,
+    300: $theme-accent-300,
+    400: $theme-accent-400,
+    500: $theme-accent-500,
+    600: $theme-accent-600,
+    700: $theme-accent-700,
+    800: $theme-accent-800,
+    900: $theme-accent-900,
+    A100: $theme-accent-A100,
+    A200: $theme-accent-A200,
+    A400: $theme-accent-A400,
+    A700: $theme-accent-A700,
+    contrast: (
+        50: $dark-primary-text,
+        100: $dark-primary-text,
+        200: $dark-primary-text,
+        300: $light-primary-text,
+        400: $light-primary-text,
+        500: $light-primary-text,
+        600: $light-primary-text,
+        700: $light-primary-text,
+        800: $light-primary-text,
+        900: $light-primary-text,
+        A100: $dark-primary-text,
+        A200: $light-primary-text,
+        A400: $light-primary-text,
+        A700: $light-primary-text,
+    ),
+);
+
+$custom-warn-palette: (
+    50: $theme-warn-50,
+    100: $theme-warn-100,
+    200: $theme-warn-200,
+    300: $theme-warn-300,
+    400: $theme-warn-400,
+    500: $theme-warn-500,
+    600: $theme-warn-600,
+    700: $theme-warn-700,
+    800: $theme-warn-800,
+    900: $theme-warn-900,
+    A100: $theme-warn-A100,
+    A200: $theme-warn-A200,
+    A400: $theme-warn-A400,
+    A700: $theme-warn-A700,
+    contrast: (
+        50: $dark-primary-text,
+        100: $dark-primary-text,
+        200: $dark-primary-text,
+        300: $light-primary-text,
+        400: $light-primary-text,
+        500: $light-primary-text,
+        600: $light-primary-text,
+        700: $light-primary-text,
+        800: $light-primary-text,
+        900: $light-primary-text,
+        A100: $dark-primary-text,
+        A200: $light-primary-text,
+        A400: $light-primary-text,
+        A700: $light-primary-text,
+    ),
+);
