--- a/projects/app-ui/src/app/shell/header/header.component.html
+++ b/projects/app-ui/src/app/shell/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="toolbar align-items-center">
+<mat-toolbar color="primary" class="toolbar align-items-center" style="height: 64px">
 	<div class="d-inline-block d-sm-none ms-n3">
 		<button mat-icon-button (click)="toggleDrawer.emit()"><mat-icon>menu</mat-icon></button>
 	</div>
