--- a/projects/app-ui/src/assets/styles/00-settings/_settings.theme.scss
+++ b/projects/app-ui/src/assets/styles/00-settings/_settings.theme.scss
@@ -1,117 +1,43 @@
 @use "@angular/material" as mat;
-
 @include mat.core();
 
-$dark-primary-text: #000000;
-$light-primary-text: #f0f0f0;
-
-$custom-primary-palette: (
-    50: $theme-primary-50,
-    100: $theme-primary-100,
-    200: $theme-primary-200,
-    300: $theme-primary-300,
-    400: $theme-primary-400,
-    500: $theme-primary-500,
-    600: $theme-primary-600,
-    700: $theme-primary-700,
-    800: $theme-primary-800,
-    900: $theme-primary-900,
-    A100: $theme-primary-A100,
-    A200: $theme-primary-A200,
-    A400: $theme-primary-A400,
-    A700: $theme-primary-A700,
-    contrast: (
-        50: $dark-primary-text,
-        100: $dark-primary-text,
-        200: $dark-primary-text,
-        300: $light-primary-text,
-        400: $light-primary-text,
-        500: $light-primary-text,
-        600: $light-primary-text,
-        700: $light-primary-text,
-        800: $light-primary-text,
-        900: $light-primary-text,
-        A100: $dark-primary-text,
-        A200: $light-primary-text,
-        A400: $light-primary-text,
-        A700: $light-primary-text,
-    ),
-);
-
-$custom-accent-palette: (
-    50: $theme-accent-50,
-    100: $theme-accent-100,
-    200: $theme-accent-200,
-    300: $theme-accent-300,
-    400: $theme-accent-400,
-    500: $theme-accent-500,
-    600: $theme-accent-600,
-    700: $theme-accent-700,
-    800: $theme-accent-800,
-    900: $theme-accent-900,
-    A100: $theme-accent-A100,
-    A200: $theme-accent-A200,
-    A400: $theme-accent-A400,
-    A700: $theme-accent-A700,
-    contrast: (
-        50: $dark-primary-text,
-        100: $dark-primary-text,
-        200: $dark-primary-text,
-        300: $light-primary-text,
-        400: $light-primary-text,
-        500: $light-primary-text,
-        600: $light-primary-text,
-        700: $light-primary-text,
-        800: $light-primary-text,
-        900: $light-primary-text,
-        A100: $dark-primary-text,
-        A200: $light-primary-text,
-        A400: $light-primary-text,
-        A700: $light-primary-text,
-    ),
-);
-
-$custom-warn-palette: (
-    50: $theme-warn-50,
-    100: $theme-warn-100,
-    200: $theme-warn-200,
-    300: $theme-warn-300,
-    400: $theme-warn-400,
-    500: $theme-warn-500,
-    600: $theme-warn-600,
-    700: $theme-warn-700,
-    800: $theme-warn-800,
-    900: $theme-warn-900,
-    A100: $theme-warn-A100,
-    A200: $theme-warn-A200,
-    A400: $theme-warn-A400,
-    A700: $theme-warn-A700,
-    contrast: (
-        50: $dark-primary-text,
-        100: $dark-primary-text,
-        200: $dark-primary-text,
-        300: $light-primary-text,
-        400: $light-primary-text,
-        500: $light-primary-text,
-        600: $light-primary-text,
-        700: $light-primary-text,
-        800: $light-primary-text,
-        900: $light-primary-text,
-        A100: $dark-primary-text,
-        A200: $light-primary-text,
-        A400: $light-primary-text,
-        A700: $light-primary-text,
-    ),
-);
-
-// $app-ui-primary: mat.define-palette(mat.$indigo-palette);
 $app-ui-primary: mat.define-palette($custom-primary-palette);
 $app-ui-accent: mat.define-palette($custom-accent-palette);
 $app-ui-warn: mat.define-palette($custom-warn-palette);
 
+// $app-typography: mat.define-typography-config(
+//     $font-family: 'Roboto, "Helvetica Neue", sans-serif',
+//     $display-4: mat.define-typography-level(112px, 112px, 300, $letter-spacing: -0.05em),
+//     $display-3: mat.define-typography-level(56px, 56px, 400, $letter-spacing: -0.02em),
+//     $display-2: mat.define-typography-level(45px, 48px, 400, $letter-spacing: -0.005em),
+//     $display-1: mat.define-typography-level(34px, 40px, 400),
+//     $headline: mat.define-typography-level(24px, 32px, 400),
+//     $title: mat.define-typography-level(20px, 32px, 500),
+//     $subheading-2: mat.define-typography-level(16px, 28px, 400),
+//     $subheading-1: mat.define-typography-level(15px, 24px, 400),
+//     $body-2: mat.define-typography-level(14px, 24px, 500),
+//     $body-1: mat.define-typography-level(14px, 20px, 400),
+//     $caption: mat.define-typography-level(12px, 20px, 400),
+//     $button: mat.define-typography-level(14px, 14px, 500),
+//     $input: mat.define-typography-level(inherit, 1.125, 400),
+// );
 $app-typography: mat.define-typography-config(
-    $font-family: "Roboto",
+    $font-family: 'Roboto, "Helvetica Neue", sans-serif',
+    $display-4: mat.define-typography-level(8rem, 8rem, 300, $letter-spacing: -0.05em),
+    $display-3: mat.define-typography-level(4rem, 4rem, 400, $letter-spacing: -0.02em),
+    $display-2: mat.define-typography-level(3.214rem, 3.428rem, 400, $letter-spacing: -0.005em),
+    $display-1: mat.define-typography-level(2.428rem, 2.857rem, 400),
+    $headline: mat.define-typography-level(1.714rem, 2.285rem, 400),
+    $title: mat.define-typography-level(1.428rem, 2.285rem, 500),
+    $subheading-2: mat.define-typography-level(1.142rem, 2rem, 400),
+    $subheading-1: mat.define-typography-level(1.071rem, 1.714rem, 400),
+    $body-2: mat.define-typography-level(1rem, 1.714rem, 500),
+    $body-1: mat.define-typography-level(1rem, 1.428rem, 400),
+    $caption: mat.define-typography-level(0.857rem, 1.428rem, 400),
+    $button: mat.define-typography-level(1rem, 1rem, 500),
+    $input: mat.define-typography-level(inherit, 1.125, 400),
 );
+
 // Define the default theme
 $light-theme: mat.define-light-theme(
     (
@@ -138,6 +64,7 @@ $dark-theme: mat.define-dark-theme(
 );
 
 @include mat.all-component-themes($light-theme);
+@include mat.typography-hierarchy($light-theme);
 
 .mat-drawer-container {
     background-color: $background-color;
