--- a/projects/app-ui/src/app/shell/shell/shell.component.html
+++ b/projects/app-ui/src/app/shell/shell/shell.component.html
@@ -1,9 +1,12 @@
 <!-- mat-toolbar -->
-<app-header (toggleDrawer)="snav.toggle()"></app-header>
+<app-header (toggleDrawer)="sideNav.toggle()"></app-header>
 <!-- mat-sidenav-container -->
 <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="64">
+	<mat-drawer> ------ </mat-drawer>
+
 	<mat-sidenav
-		#snav
+		#sideNav
+		position="start"
 		[mode]="mobileQuery.matches ? 'over' : 'side'"
 		[opened]="mobileQuery.matches ? false : true"
 		[fixedInViewport]="mobileQuery.matches"
@@ -28,5 +31,13 @@
 			</div>
 			<router-outlet></router-outlet>
 		</div>
+		<mat-drawer #drawerEnd position="end" mode="over" fixedTopGap="56" opened>
+			Drawer content
+			<template #componentContainer> </template>
+		</mat-drawer>
 	</mat-sidenav-content>
+	<ng-template #dialogActions>
+		<button mat-button color="warn" (click)="closeDrawer()">Discard</button>
+		<button mat-button color="primary" (click)="onSubmit()">Save</button>
+	</ng-template>
 </mat-sidenav-container>
