--- a/projects/app-ui/src/app/features/orders/orders-list/orders-list.component.html
+++ b/projects/app-ui/src/app/features/orders/orders-list/orders-list.component.html
@@ -1,10 +1,12 @@
 <div class="container-fluid">
+	<app-breadcrumb></app-breadcrumb>
+
 	<div class="row">
 		<div class="col-sm-8">
 			<mat-card>
 				<div class="d-flex">
 					<h1>Orders</h1>
-					<a class="ms-auto" mat-button color="primary" [routerLink]="['add']">Create Order</a>
+					<a class="ms-auto align-self-start" mat-button color="primary" [routerLink]="['add']">Create Order</a>
 				</div>
 				<p>orders-list works!</p>
 			</mat-card>
