refactor: side drawer component render

--- a/projects/app-ui/src/app/features/customers/customer-form/customer-form.component.html
+++ b/projects/app-ui/src/app/features/customers/customer-form/customer-form.component.html
@@ -4,8 +4,9 @@
 		<div [ngClass]="!isDrawerMode ? 'col-9' : 'col'">
 			<mat-card>
 				<h1>Create Customer</h1>
-				{{ isDrawerMode }}
-				{{ formMode }}
+				isDrawerMode:{{ isDrawerMode }} <br />
+				formMode:{{ formMode }} <br />
+				index:{{ index }}
 				<form [formGroup]="form">
 					<div class="row">
 						<div class="col">
