--- a/projects/app-ui/src/app/core/auth/login/login.component.html
+++ b/projects/app-ui/src/app/core/auth/login/login.component.html
@@ -80,7 +80,18 @@
 								</mat-form-field>
 							</div>
 							<div class="form-group">
-								<button mat-raised-button color="primary" class="w-100" (click)="submitRecord()">Login</button>
+								<app-form-action-bar
+									[startButtons]="[
+										{
+											visible: true,
+											disabled: false,
+											class: 'mat-raised-button w-100',
+											color: 'primary',
+											text: 'Login'
+										}
+									]"
+									(buttonClick)="submitRecord()"
+								></app-form-action-bar>
 							</div>
 						</form>
 						<!-- End Form -->
