--- a/projects/app-ui/src/app/shell/drawer/drawer.component.html
+++ b/projects/app-ui/src/app/shell/drawer/drawer.component.html
@@ -1,4 +1,4 @@
 <mat-drawer #drawerEnd position="end" mode="over" fixedTopGap="56" opened="true" [disableClose]="true">
-	{{ componentName }} {{ index }} {{ drawerComponents.length }}
+	<!-- {{ componentName }} a{{ index }} b{{ drawerComponents.length }} -->
 	<template appDrawerHost> </template>
 </mat-drawer>
