feat: add service worker update check
- add service worker update check
- add browser status check app-worker

--- a/projects/app-ui/src/app/app.component.html
+++ b/projects/app-ui/src/app/app.component.html
@@ -1,3 +1,4 @@
 <main class="main">
+	<span class="position-absolute top-0" style="z-index: 100">online{{ online }}</span>
 	<router-outlet></router-outlet>
 </main>
