--- a/projects/app-ui/src/app/shell/header/header.component.html
+++ b/projects/app-ui/src/app/shell/header/header.component.html
@@ -18,7 +18,13 @@
 			</a>
 		</div>
 		<div class="notifications-action mx-1">
-			<a class="d-flex flex-column align-items-center" aria-label="Example icon-button with a menu">
+			<a
+				class="d-flex flex-column align-items-center"
+				aria-label="Example icon-button with a menu"
+				matBadge="5"
+				matBadgePosition="after"
+				matBadgeColor="accent"
+			>
 				<mat-icon>home</mat-icon>
 				<span class="mat-caption d-none d-sm-block">Notifications</span>
 			</a>
