--- a/projects/app-ui/src/app/shell/drawer/drawer.component.html
+++ b/projects/app-ui/src/app/shell/drawer/drawer.component.html
@@ -2,3 +2,4 @@
 	<!-- {{ componentName }} a{{ index }} b{{ drawerComponents.length }} -->
 	<template appDrawerHost> </template>
 </mat-drawer>
+<!-- <div class="mat-drawer-backdrop ng-star-inserted mat-drawer-shown"></div> -->
