test: handle order feature toggling dialog form popup

--- a/projects/app-ui/src/app/features/customers/customer-form/customer-form.component.html
+++ b/projects/app-ui/src/app/features/customers/customer-form/customer-form.component.html
@@ -27,6 +27,7 @@
 				</form>
 			</mat-card>
 		</div>
+		<div class="col-3" *ngIf="!isDrawerMode"></div>
 	</div>
 	<div class="row">
 		<div [ngClass]="!isDrawerMode ? 'col-9' : 'col'">
