--- a/projects/app-ui/src/assets/styles/00-settings/_settings.theme-variables.scss
+++ b/projects/app-ui/src/assets/styles/00-settings/_settings.theme-variables.scss
@@ -8,6 +8,8 @@ $foreground-dark-color: #424242;
 
 $dark-primary-text: #000000;
 $light-primary-text: #f0f0f0;
+
+$background-white: #ffffff;
 //#region Primary css variables
 $theme-primary-50: var(--theme-primary-50);
 $theme-primary-100: var(--theme-primary-100);
