--- a/projects/app-ui/src/assets/styles/00-settings/_settings.bootstrap.scss
+++ b/projects/app-ui/src/assets/styles/00-settings/_settings.bootstrap.scss
@@ -19,6 +19,7 @@ $prefix: "mo-";
 @import "node_modules/bootstrap/scss/reboot";
 @import "node_modules/bootstrap/scss/containers";
 @import "node_modules/bootstrap/scss/grid";
+@import "node_modules/bootstrap/scss/list-group";
 
 //Required Variables
 :root {
