--- a/projects/app-ui/src/app/shell/shell/shell.component.html
+++ b/projects/app-ui/src/app/shell/shell/shell.component.html
@@ -15,6 +15,8 @@
 	</mat-sidenav>
 
 	<mat-sidenav-content>
+		<app-loading-bar class="position-absolute top-0 start-0 end-0"></app-loading-bar>
+
 		<div class="main-content">
 			<router-outlet></router-outlet>
 		</div>
