refactor: add waiting flag form action bar
- handle is waiting flag to reflect loading
- update bootstrap setting end-0 and start-0
- apply flag to login action form

--- a/projects/app-ui/src/app/core/auth/login/login.component.html
+++ b/projects/app-ui/src/app/core/auth/login/login.component.html
@@ -87,7 +87,8 @@
 											disabled: false,
 											class: 'mat-raised-button w-100',
 											color: 'primary',
-											text: 'Login'
+											text: 'Login',
+											isWaiting: isWaiting
 										}
 									]"
 									(buttonClick)="submitRecord()"
