--- a/projects/app-ui/src/app/shared/components/form-action-bar/form-action-bar.component.html
+++ b/projects/app-ui/src/app/shared/components/form-action-bar/form-action-bar.component.html
@@ -10,10 +10,17 @@
 					'split-button-left': action?.options && !isDrawerMode,
 					'me-3': (!action?.options && !isLast) || (isDrawerMode && !isLast)
 				}"
-				[disabled]="action?.disabled"
+				[disabled]="action?.disabled || action?.isWaiting"
 				(click)="onActionSubmit(action?.text)"
 			>
 				{{ action?.text }}
+				<mat-icon
+					*ngIf="action?.isWaiting"
+					class="position-absolute d-inline-block top-0 bottom-0 end-1 m-auto"
+					style="width: 14px; height: 14px"
+				>
+					<mat-spinner diameter="14"> </mat-spinner>
+				</mat-icon>
 			</button>
 			<button
 				*ngIf="action.options && !isDrawerMode && action?.visible"
@@ -40,10 +47,17 @@
 				[color]="action?.color"
 				class="mb-2 {{ action?.class }}"
 				[ngClass]="{ 'split-button-left': action?.options && !isDrawerMode, 'me-3': !action?.options && !isLast }"
-				[disabled]="action?.disabled"
+				[disabled]="action?.disabled || action?.isWaiting"
 				(click)="onActionSubmit(action?.text)"
 			>
 				{{ action?.text }}
+				<mat-icon
+					*ngIf="action?.isWaiting"
+					class="position-absolute d-inline-block top-0 bottom-0 end-1 m-auto"
+					style="width: 14px; height: 14px"
+				>
+					<mat-spinner diameter="14"> </mat-spinner>
+				</mat-icon>
 			</button>
 			<button
 				*ngIf="action.options && !isDrawerMode && action?.visible"
