feat: create latest order component

--- a/projects/app-ui/src/assets/styles/03-elements/_elements.list.scss
+++ b/projects/app-ui/src/assets/styles/03-elements/_elements.list.scss
@@ -7,7 +7,7 @@ ol {
 .list-group {
     --mo-list-group-color: $bark-primary-text;
     --mo-list-group-bg: $background-white;
-    --mo-list-group-border-color: #595959;
+    --mo-list-group-border-color: #e0e0e0;
 }
 .dark-mode {
     .list-group {
