--- a/projects/app-ui/src/app/features/home/home-view/home-view.component.html
+++ b/projects/app-ui/src/app/features/home/home-view/home-view.component.html
@@ -1,6 +1,14 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-sm-8">
+			<div class="row">
+				<div class="col-6">
+					<app-orders-list-card></app-orders-list-card>
+				</div>
+				<div class="col-6">
+					<mat-card></mat-card>
+				</div>
+			</div>
 			<mat-card>
 				<h1>Header 1</h1>
 				<h2>Header 2</h2>
