feat: manage offline mode draft

--- a/projects/app-ui/src/app/features/home/home-view/home-view.component.html
+++ b/projects/app-ui/src/app/features/home/home-view/home-view.component.html
@@ -6,7 +6,7 @@
 					<app-orders-list-card></app-orders-list-card>
 				</div>
 				<div class="col-6">
-					<mat-card></mat-card>
+					<app-orders-list-card></app-orders-list-card>
 				</div>
 			</div>
 			<mat-card>
