--- a/projects/app-ui/src/app/features/orders/order-form/order-form.component.html
+++ b/projects/app-ui/src/app/features/orders/order-form/order-form.component.html
@@ -56,7 +56,7 @@
 			</mat-card>
 		</div>
 		<div class="col-3" *ngIf="!isDrawerMode">
-			<app-customer-card *ngIf="formControls['customer'].value"></app-customer-card>
+			<app-customer-details-card *ngIf="formControls['customer'].value"></app-customer-details-card>
 		</div>
 	</div>
 	<div class="row">
