refactor: restructure and component refactor
- rename app-connection-issue to shell-connection-issue
- rename app-loading-bar to shell-loading-bar
- add isOnline to base component
- rebrand isOnline ui indicator

--- a/projects/app-ui/src/app/shell/_components/shell-connection-issue/shell-connection-issue.component.html
+++ b/projects/app-ui/src/app/shell/_components/shell-connection-issue/shell-connection-issue.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex align-items-center justify-content-center vh-100 app-background">
+<div class="d-flex align-items-center justify-content-center vh-100 mat-app-background">
 	<div class="text-center">
 		<div>Connect to the internet</div>
 		<p>You're offline. Check your connection.</p>
