--- a/projects/app-ui/src/app/features/orders/orders-list/orders-list.component.html
+++ b/projects/app-ui/src/app/features/orders/orders-list/orders-list.component.html
@@ -1,6 +1,17 @@
 <div class="container-fluid">
-	<app-breadcrumb></app-breadcrumb>
-
+	<app-page-header
+		[title]="'Orders'"
+		[actionButtons]="[
+			{
+				visible: true,
+				disabled: false,
+				class: 'mat-raised-button w-100',
+				color: 'primary',
+				text: 'Login',
+				isWaiting: isWaiting
+			}
+		]"
+	></app-page-header>
 	<div class="row">
 		<div class="col-sm-8">
 			<mat-card>
