--- a/projects/app-ui/src/app/features/home/home-view/home-view.component.html
+++ b/projects/app-ui/src/app/features/home/home-view/home-view.component.html
@@ -1,4 +1,17 @@
 <div class="container-fluid">
+	<app-page-header
+		[title]="'Home'"
+		[actionButtons]="[
+			{
+				visible: true,
+				disabled: false,
+				class: 'mat-raised-button w-100',
+				color: 'primary',
+				text: 'Login',
+				isWaiting: isWaiting
+			}
+		]"
+	></app-page-header>
 	<div class="row">
 		<div class="col-sm-8">
 			<div class="row">
